--- a/templates/presets/php.conf.tmpl
+++ b/templates/presets/php.conf.tmpl
@@ -10,5 +10,5 @@ location / {
 location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     fastcgi_pass php;
-    track_uploads uploads 60s;
+    track_uploads {{ getenv "NGINX_TRACK_UPLOADS" "uploads 60s" }};
 }
