--- a/templates/presets/drupal7.conf.tmpl
+++ b/templates/presets/drupal7.conf.tmpl
@@ -29,18 +29,18 @@ location / {
 
     location ~* /files/styles/ {
         access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
-        expires {{ getenv "NGINX_STATIC_EXPIRES" "30d" }};
+        expires {{ getenv "NGINX_STATIC_EXPIRES" "7d" }};
         try_files $uri @drupal;
     }
 
     location ~* /sites/.+/files/.+\.txt {
         access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
-        expires {{ getenv "NGINX_STATIC_EXPIRES" "30d" }};
-        tcp_nodelay off;
-        open_file_cache {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE" "max=3000 inactive=120s" }};
-        open_file_cache_valid {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE_VALID" "45s" }};
+        expires {{ getenv "NGINX_STATIC_EXPIRES" "7d" }};
+        tcp_nodelay {{ getenv "NGINX_STATIC_TCP_NODELAY" "off" }};
+        open_file_cache {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE" "max=1000 inactive=20s" }};
+        open_file_cache_valid {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE_VALID" "30s" }};
         open_file_cache_min_uses {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE_MIN_USES" "2" }};
-        open_file_cache_errors off;
+        open_file_cache_errors {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE_ERRORS" "off" }};
     }
 
     location ~* /sites/.+/files/advagg_css/ {
@@ -101,7 +101,7 @@ location @drupal {
     fastcgi_param SCRIPT_NAME /index.php;
     fastcgi_param SCRIPT_FILENAME $document_root/index.php;
     fastcgi_pass php;
-    track_uploads {{ getenv "NGINX_DRUPAL_TRACK_UPLOADS" "uploads 60s" }};
+    track_uploads {{ getenv "NGINX_TRACK_UPLOADS" "uploads 60s" }};
 }
 
 location @drupal-no-args {
@@ -141,7 +141,7 @@ location ~* ^/update.php {
 }
 
 location = /xmlrpc.php {
-    {{ if getenv "NGINX_DRUPAL_XMLRPC_SERVER_NAME" "" }}
+    {{ if getenv "NGINX_DRUPAL_XMLRPC_SERVER_NAME" }}
     include fastcgi.conf;
     fastcgi_param  SERVER_NAME {{ getenv "NGINX_DRUPAL_XMLRPC_SERVER_NAME" }};
     {{ end }}
