--- a/templates/nginx.conf.tmpl
+++ b/templates/nginx.conf.tmpl
@@ -12,15 +12,21 @@ http {
     include                     /etc/nginx/mime.types;
     default_type                application/octet-stream;
 
+    {{ $access_log_format := "combined" }}
+
+    {{ if getenv "NGINX_LOG_FORMAT_SHOW_REAL_IP" }}
     log_format                  real_ip '$http_x_real_ip - $remote_user [$time_local] '
                                         '"$request" $status $body_bytes_sent '
                                         '"$http_referer" "$http_user_agent"';
+    {{ $access_log_format := "real_ip" }}
+    {{ end }}
 
-{{ if getenv "NGINX_LOG_FORMAT_OVERRIDE" }}
+    {{ if getenv "NGINX_LOG_FORMAT_OVERRIDE" }}
     log_format                  custom '{{ getenv "NGINX_LOG_FORMAT_OVERRIDE" }}';
-{{ end }}
+    {{ $access_log_format := "custom" }}
+    {{ end }}
 
-    access_log                  /proc/self/fd/1 {{ if getenv "NGINX_LOG_FORMAT_SHOW_REAL_IP" }}real_ip{{ else }}custom{{ end }};
+    access_log                  /proc/self/fd/1 {{ $access_log_format }};
 
     send_timeout                {{ getenv "NGINX_SEND_TIMEOUT" "60s" }};
     sendfile                    {{ getenv "NGINX_SENDFILE" "on" }};
