--- a/templates/presets/html.conf.tmpl
+++ b/templates/presets/html.conf.tmpl
@@ -1,4 +1,6 @@
 location / {
     {{ $index := (getenv "NGINX_INDEX_FILE" "index.html index.htm") }}
     index {{ $index }};
+
+    try_files $uri $uri/ =404;
 }
