Bugfix: pages 403 and 404 customization did not work

--- a/templates/includes/defaults.conf.tmpl
+++ b/templates/includes/defaults.conf.tmpl
@@ -84,11 +84,11 @@ location = /50x.html {
     root   /usr/share/nginx/html;
 }
 
-{{ if getenv "NGINX_ERROR_PAGE_403" }};
+{{ if getenv "NGINX_ERROR_PAGE_403" }}
 error_page 403 {{ getenv "NGINX_ERROR_PAGE_403" }};
 {{ end }}
 
-{{ if getenv "NGINX_ERROR_PAGE_404" }};
+{{ if getenv "NGINX_ERROR_PAGE_404" }}
 error_page 404 {{ getenv "NGINX_ERROR_PAGE_404" }};
 {{ end }}
 
