--- a/templates/nginx.conf.tmpl
+++ b/templates/nginx.conf.tmpl
@@ -62,6 +62,13 @@ http {
     pagespeed RewriteLevel          {{ getenv "NGINX_PAGESPEED_REWRITE_LEVEL" "CoreFilters" }};
     pagespeed StaticAssetPrefix     {{ getenv "NGINX_PAGESPEED_STATIC_ASSET_PREFIX" "/pagespeed_static" }};
 
+    {{ if getenv "NGINX_SET_REAL_IP_FROM" }}
+    set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM" }};
+    {{ end }}
+
+    real_ip_header {{ getenv "NGINX_REAL_IP_HEADER" "X-Real-IP" }};
+    real_ip_recursive {{ getenv "NGINX_REAL_IP_RECURSIVE" "off" }};
+
     {{ if getenv "NGINX_PAGESPEED_ENABLE_FILTERS" }}
     pagespeed EnableFilters         {{ getenv "NGINX_PAGESPEED_ENABLE_FILTERS" }};
     {{ end }}
