Remove default duplicated headers for D7/D8. Add missing default headers for WP https://github.com/wodby/docker4drupal/issues/336

--- a/templates/presets/drupal8.conf.tmpl
+++ b/templates/presets/drupal8.conf.tmpl
@@ -2,6 +2,8 @@ index index.php;
 
 include fastcgi.conf;
 
+add_header  X-XSS-Protection '1; mode=block';
+
 {{ if getenv "NGINX_DRUPAL_HIDE_HEADERS" }}
 fastcgi_hide_header 'X-Drupal-Cache';
 fastcgi_hide_header 'X-Generator';
