Introduce $NGINX_STATIC_404_INDEX_REDIRECT

--- a/templates/presets/wordpress.conf.tmpl
+++ b/templates/presets/wordpress.conf.tmpl
@@ -1,3 +1,5 @@
+{{ $static := (getenv "NGINX_STATIC_EXT_REGEX" "css|cur|js|jpe?g|gif|htc|ico|png|xml|otf|ttf|eot|woff|woff2|svg|mp4|svgz|ogg|ogv|pdf|pptx?|zip|tgz|gz|rar|bz2|doc|xls|exe|tar|mid|midi|wav|bmp|rtf") }}
+
 index index.php;
 
 include fastcgi.conf;
@@ -22,6 +24,29 @@ location ~* /(?:uploads|files)/.*\.php$ {
 }
 
 location / {
+    location ~* ^.+\.(?:{{ $static }})$ {
+        access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
+        tcp_nodelay {{ getenv "NGINX_STATIC_TCP_NODELAY" "off" }};
+        expires {{ getenv "NGINX_STATIC_EXPIRES" "7d" }};
+
+        add_header Pragma "cache";
+        add_header Cache-Control "public";
+
+        open_file_cache {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE" "max=1000 inactive=30s" }};
+        open_file_cache_valid {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE_VALID" "30s" }};
+        open_file_cache_min_uses {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE_MIN_USES" "2" }};
+        open_file_cache_errors {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE_ERRORS" "off" }};
+
+        location ~* ^.+\.(?:svgz|tgz|gz)$ {
+            gzip off;
+            add_header Content-Encoding gzip;
+        }
+
+        {{ if getenv "NGINX_STATIC_404_INDEX_REDIRECT" }}
+        try_files $uri $uri/ /index.php?$args;
+        {{ end }}
+    }
+
     try_files $uri $uri/ /index.php?$args;
 }
 
