--- a/templates/presets/wordpress.conf.tmpl
+++ b/templates/presets/wordpress.conf.tmpl
@@ -11,19 +11,29 @@ add_header  X-Content-Type-Options nosniff;
 add_header  Cache-Control "store, must-revalidate, post-check=0, pre-check=0";
 {{ end }}
 
-location = /readme.html {
-    return 404;
-}
-
-location ~* ^.*(\.(?:git|svn|htaccess|txt|pot?))$ {
-    return 404;
-}
-
-location ~* /(?:uploads|files)/.*\.php$ {
-    deny all;
-}
-
 location / {
+    location = /readme.html {
+        return 404;
+    }
+
+    location ~* /wp-content/uploads/.+\.txt {
+        access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
+        expires {{ getenv "NGINX_STATIC_EXPIRES" "7d" }};
+        tcp_nodelay {{ getenv "NGINX_STATIC_TCP_NODELAY" "off" }};
+        open_file_cache {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE" "max=1000 inactive=30s" }};
+        open_file_cache_valid {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE_VALID" "30s" }};
+        open_file_cache_min_uses {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE_MIN_USES" "2" }};
+        open_file_cache_errors {{ getenv "NGINX_STATIC_OPEN_FILE_CACHE_ERRORS" "off" }};
+    }
+
+    location ~* ^.*(\.(?:git|svn|htaccess|txt|pot?))$ {
+        return 404;
+    }
+
+    location ~* /(?:uploads|files)/.*\.php$ {
+        deny all;
+    }
+
     location ~* ^.+\.(?:{{ $static }})$ {
         access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
         tcp_nodelay {{ getenv "NGINX_STATIC_TCP_NODELAY" "off" }};
