--- a/templates/nginx.conf.tmpl
+++ b/templates/nginx.conf.tmpl
@@ -2,7 +2,9 @@ user                            {{ getenv "NGINX_USER" "nginx" }};
 daemon                          off;
 worker_processes                {{ getenv "NGINX_WORKER_PROCESSES" "auto" }};
 error_log                       /proc/self/fd/2 {{ getenv "NGINX_ERROR_LOG_LEVEL" "error" }};
+{{ if not ( getenv "NGINX_DISABLE_MODSECURITY") }}
 load_module                     modules/ngx_http_modsecurity_module.so;
+{{ end }}
 events {
     worker_connections          {{ getenv "NGINX_WORKER_CONNECTIONS" "1024" }};
     multi_accept                {{ getenv "NGINX_MULTI_ACCEPT" "on" }};
