--- a/templates/vhost.conf.tmpl
+++ b/templates/vhost.conf.tmpl
@@ -3,6 +3,11 @@ include upstream.conf;
 server {
     listen       80 default_server{{ if getenv "NGINX_HTTP2" }} http2{{ end }};
     server_name  {{ getenv "NGINX_SERVER_NAME" "default" }};
+	
+	{{ if not ( getenv "NGINX_DISABLE_MODSECURITY") }}
+	modsecurity on;
+    modsecurity_rules_file /etc/nginx/modsec/main.conf;
+    {{ end }}
 
     root {{ getenv "NGINX_SERVER_ROOT" "/var/www/html" }};
 
