--- a/templates/vhost.conf.tmpl
+++ b/templates/vhost.conf.tmpl
@@ -4,7 +4,7 @@ server {
     listen       80 default_server{{ if getenv "NGINX_HTTP2" }} http2{{ end }};
     server_name  {{ getenv "NGINX_SERVER_NAME" "default" }};
 	
-	{{ if not ( getenv "NGINX_DISABLE_MODSECURITY") }}
+	{{ if eq ( getenv "NGINX_DISABLE_MODSECURITY" "1") "0" }}
 	modsecurity on;
     modsecurity_rules_file /etc/nginx/modsec/main.conf;
     {{ end }}
