--- a/templates/includes/modsec.conf.tmpl
+++ b/templates/includes/modsec.conf.tmpl
@@ -1,13 +1,6 @@
 Include /etc/nginx/modsec/modsecurity.conf
 
-SecAction \
- "id:900110,\
-  phase:1,\
-  nolog,\
-  pass,\
-  t:none,\
-  setvar:tx.inbound_anomaly_score_threshold={{ getenv "NGINX_MODSEC_ANOMALY_IN_THRESHOLD" "7" }},\
-  setvar:tx.outbound_anomaly_score_threshold={{ getenv "NGINX_MODSEC_ANOMALY_OUT_THRESHOLD" "7" }}"
+Include /usr/local/owasp-modsecurity-crs/crs-setup.conf
 
 {{ if or (eq (getenv "NGINX_VHOST_PRESET") "drupal8") (eq (getenv "NGINX_VHOST_PRESET") "drupal7") (eq (getenv "NGINX_VHOST_PRESET") "drupal6") }}
 SecAction \
@@ -37,11 +30,23 @@ SecAction \
   setvar:tx.crs_exclusions_cpanel=0"
 {{ end }}
 
-{{ if getenv "NGINX_MODSEC_SETUP_RULES" }}
-Include {{ getenv "NGINX_MODSEC_SETUP_RULES" }}
+SecAction \
+ "id:900110,\
+  phase:1,\
+  nolog,\
+  pass,\
+  t:none,\
+  setvar:tx.inbound_anomaly_score_threshold={{ getenv "NGINX_MODSEC_ANOMALY_IN_THRESHOLD" "7" }},\
+  setvar:tx.outbound_anomaly_score_threshold={{ getenv "NGINX_MODSEC_ANOMALY_OUT_THRESHOLD" "7" }}"
+
+{{ if getenv "NGINX_MODSEC_PRE_CORE_RULES" }}
+Include {{ getenv "NGINX_MODSEC_PRE_CORE_RULES" }}
 {{ end }}
 
-Include /usr/local/owasp-modsecurity-crs/crs-setup.conf
 
 Include /usr/local/owasp-modsecurity-crs/rules/*.conf
+
+{{ if getenv "NGINX_MODSEC_POST_CORE_RULES" }}
+Include {{ getenv "NGINX_MODSEC_POST_CORE_RULES" }}
+{{ end }}
 
