--- a/templates/presets/drupal8.conf.tmpl
+++ b/templates/presets/drupal8.conf.tmpl
@@ -20,7 +20,7 @@ location / {
     {{ end }}
     location ~* /system/files/ {
         include fastcgi.conf;
-        fastcgi_param QUERY_STRING q=$uri&$args;
+        fastcgi_param QUERY_STRING $query_string;
         fastcgi_param SCRIPT_NAME /index.php;
         fastcgi_param SCRIPT_FILENAME $document_root/index.php;
         fastcgi_pass php;
