--- a/templates/presets/django.conf.tmpl
+++ b/templates/presets/django.conf.tmpl
@@ -11,9 +11,9 @@ location @app {
 }
 
 location {{ getenv "NGINX_DJANGO_STATIC_URL" "/static/" }} {
-    alias {{ getenv "NGINX_DJANGO_STATIC_ROOT" "/usr/src/app/static/" }};
+    alias {{ getenv "NGINX_DJANGO_STATIC_ROOT" "/var/www/html/static/" }};
 }
 
 location {{ getenv "NGINX_DJANGO_MEDIA_URL" "/media/" }} {
-    alias {{ getenv "NGINX_DJANGO_MEDIA_ROOT" "/usr/src/app/media/" }};
+    alias {{ getenv "NGINX_DJANGO_MEDIA_ROOT" "/var/www/html/media/" }};
 }
