Increase match priority of .well-known location #17

--- a/templates/includes/defaults.conf.tmpl
+++ b/templates/includes/defaults.conf.tmpl
@@ -4,7 +4,7 @@ add_header Pragma "no-cache";
 add_header Cache-Control "no-store, no-cache, must-revalicate, post-check=0 pre-check=0";
 {{ end }}
 
-location ~* ^/.well-known/ {
+location ^~ /.well-known/ {
     allow all;
 }
 
