Make extra config be able to work without defaults.

--- a/templates/vhost.conf.tmpl
+++ b/templates/vhost.conf.tmpl
@@ -18,4 +18,8 @@ server {
     {{ if not (getenv "NGINX_VHOST_NO_DEFAULTS") }}
     include defaults.conf;
     {{ end }}
+
+    {{ if getenv "NGINX_SERVER_EXTRA_CONF_FILEPATH" }}
+    include {{ getenv "NGINX_SERVER_EXTRA_CONF_FILEPATH" }};
+    {{ end }}
 }
