Set default NGINX_STATIC_EXPIRES to 1 year.
As we already set the value to be high enough which makes it so that
the content won't be loaded between requests, we might as well set it
to very high as suggested by Google pagespeed insights.

Ref. https://developers.google.com/web/tools/lighthouse/audits/cache-policy

--- a/templates/includes/defaults.conf.tmpl
+++ b/templates/includes/defaults.conf.tmpl
@@ -9,7 +9,7 @@ location ^~ /.well-known/ {
 }
 
 location = /favicon.ico {
-    expires {{ getenv "NGINX_STATIC_EXPIRES" "7d" }};
+    expires {{ getenv "NGINX_STATIC_EXPIRES" "1y" }};
     try_files /favicon.ico @empty;
     log_not_found off;
     access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
@@ -22,7 +22,7 @@ location = /robots.txt {
 }
 
 location @empty {
-    expires {{ getenv "NGINX_STATIC_EXPIRES" "7d" }};
+    expires {{ getenv "NGINX_STATIC_EXPIRES" "1y" }};
     empty_gif;
 }
 
