Hide pagespeed version, closes #32

--- a/templates/nginx.conf.tmpl
+++ b/templates/nginx.conf.tmpl
@@ -59,6 +59,7 @@ http {
     pagespeed RewriteLevel              {{ getenv "NGINX_PAGESPEED_REWRITE_LEVEL" "CoreFilters" }};
     pagespeed StaticAssetPrefix         {{ getenv "NGINX_PAGESPEED_STATIC_ASSET_PREFIX" "/pagespeed_static" }};
     pagespeed RespectXForwardedProto    {{ getenv "NGINX_PAGESPEED_RESPECT_X_FORWARDED_PROTO" "on" }};
+    pagespeed XHeaderValue              {{ getenv "NGINX_PAGESPEED_X_HEADER_VALUE" "PageSpeed" }};
     {{ end }}
 
     {{ if getenv "NGINX_SET_REAL_IP_FROM" }}
