--- a/templates/presets/wordpress.conf.tmpl
+++ b/templates/presets/wordpress.conf.tmpl
@@ -12,50 +12,6 @@ add_header  Cache-Control "store, must-revalidate, post-check=0, pre-check=0";
 {{ end }}
 
 location / {
-    {{ if getenv "NGINX_WP_W3TC" }}
-    set $w3tc_rewrite 1;
-    if ($request_method = POST) {
-        set $w3tc_rewrite 0;
-    }
-    if ($query_string != "") {
-        set $w3tc_rewrite 0;
-    }
-    if ($request_uri !~ \/$) {
-        set $w3tc_rewrite 0;
-    }
-    if ($http_cookie ~* "(comment_author|wp\-postpass|w3tc_logged_out|wordpress_logged_in|wptouch_switch_toggle)") {
-        set $w3tc_rewrite 0;
-    }
-    set $w3tc_preview "";
-    if ($http_cookie ~* "(w3tc_preview)") {
-        set $w3tc_preview _preview;
-    }
-    set $w3tc_ssl "";
-    if ($scheme = https) {
-        set $w3tc_ssl _ssl;
-    }
-    if ($http_x_forwarded_proto = 'https') {
-        set $w3tc_ssl _ssl;
-    }
-    set $w3tc_enc "";
-    if ($http_accept_encoding ~ gzip) {
-        set $w3tc_enc _gzip;
-    }
-    if (!-f "$document_root/wp-content/cache/page_enhanced/$http_host/$request_uri/_index$w3tc_ssl$w3tc_preview.html$w3tc_enc") {
-      set $w3tc_rewrite 0;
-    }
-    if ($w3tc_rewrite = 1) {
-        rewrite .* "/wp-content/cache/page_enhanced/$http_host/$request_uri/_index$w3tc_ssl$w3tc_preview.html$w3tc_enc" last;
-    }
-
-    location ~ /wp-content/cache/page_enhanced.*gzip$ {
-        gzip off;
-        types {}
-        default_type text/html;
-        add_header Content-Encoding gzip;
-    }
-    {{ end }}
-
     location = /readme.html {
         return 404;
     }
@@ -76,6 +32,17 @@ location / {
 
     location ~* /(?:uploads|files)/.*\.php$ {
         deny all;
+    }
+
+    location ~ ([^/]*)sitemap(.*).x(m|s)l$ {
+        rewrite ^/sitemap.xml$ /sitemap_index.xml permanent;
+        rewrite ^/([a-z]+)?-?sitemap.xsl$ /index.php?yoast-sitemap-xsl=$1 last;
+        rewrite ^/sitemap_index.xml$ /index.php?sitemap=1 last;
+        rewrite ^/([^/]+?)-sitemap([0-9]+)?.xml$ /index.php?sitemap=$1&sitemap_n=$2 last;
+        rewrite ^/news-sitemap.xml$ /index.php?sitemap=wpseo_news last;
+        rewrite ^/locations.kml$ /index.php?sitemap=wpseo_local_kml last;
+        rewrite ^/geo-sitemap.xml$ /index.php?sitemap=wpseo_local last;
+        rewrite ^/video-sitemap.xsl$ /index.php?yoast-sitemap-xsl=video last;
     }
 
     location ~* ^.+\.(?:{{ $static }})$ {
