Adds the ability to serve /humans.txt
humans.txt is a TXT file that contains information about the different people who
have contributed to building the website.
More info: http://humanstxt.org/

--- a/templates/includes/defaults.conf.tmpl
+++ b/templates/includes/defaults.conf.tmpl
@@ -21,6 +21,12 @@ location = /robots.txt {
     access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
 }
 
+location = /humans.txt {
+    allow all;
+    log_not_found off;
+    access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
+}
+
 location @empty {
     expires {{ getenv "NGINX_STATIC_EXPIRES" "1y" }};
     empty_gif;
