--- a/templates/includes/defaults.conf.tmpl
+++ b/templates/includes/defaults.conf.tmpl
@@ -4,10 +4,6 @@ add_header Pragma "no-cache";
 add_header Cache-Control "no-store, no-cache, must-revalicate, post-check=0 pre-check=0";
 {{ end }}
 
-location ^~ /.well-known/ {
-    allow all;
-}
-
 location = /favicon.ico {
     expires {{ getenv "NGINX_STATIC_EXPIRES" "1y" }};
     try_files /favicon.ico @empty;
@@ -60,7 +56,7 @@ location ~ "^/ngx_pagespeed_beacon$" { }
 {{ end }}
 
 {{ if not (getenv "NGINX_ALLOW_ACCESS_HIDDEN_FILES") }}
-location ~ /\. {
+location ~ /\.(!?well-known) {
     deny all;
 }
 {{ end }}
