Adds the ability to serve /ads.txt
Ref. https://support.google.com/adsense/answer/7532444

--- a/templates/includes/defaults.conf.tmpl
+++ b/templates/includes/defaults.conf.tmpl
@@ -23,6 +23,12 @@ location = /humans.txt {
     access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
 }
 
+location = /ads.txt {
+    allow all;
+    log_not_found off;
+    access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
+}
+
 location @empty {
     expires {{ getenv "NGINX_STATIC_EXPIRES" "1y" }};
     empty_gif;
