--- a/templates/presets/drupal7.conf.tmpl
+++ b/templates/presets/drupal7.conf.tmpl
@@ -52,8 +52,9 @@ location / {
         add_header ETag '';
         add_header Last-Modified 'Wed, 20 Jan 1988 04:20:42 GMT';
         add_header Accept-Ranges '';
-        location ~* /sites/.*/files/advagg_css/css[_[:alnum:]]+\.css$ {
+        location ~* /sites/.*/files/advagg_css/.+\.css$ {
             access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
+            add_header Cache-Control "public, max-age=31536000, no-transform, immutable";
             try_files $uri @drupal;
         }
     }
@@ -63,8 +64,9 @@ location / {
         add_header ETag '';
         add_header Last-Modified 'Wed, 20 Jan 1988 04:20:42 GMT';
         add_header Accept-Ranges '';
-        location ~* /sites/.*/files/advagg_js/js[_[:alnum:]]+\.js$ {
+        location ~* /sites/.*/files/advagg_js/.+\.js$ {
             access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
+            add_header Cache-Control "public, max-age=31536000, no-transform, immutable";
             try_files $uri @drupal;
         }
     }
