Support dynamic robots.txt endpoint in WP

--- a/templates/includes/defaults.conf.tmpl
+++ b/templates/includes/defaults.conf.tmpl
@@ -11,7 +11,7 @@ location = /favicon.ico {
     access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
 }
 
-location = /robots.txt {
+location ^~ /robots.txt {
     allow all;
     log_not_found off;
     access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
