--- a/templates/nginx.conf.tmpl
+++ b/templates/nginx.conf.tmpl
@@ -117,6 +117,30 @@ http {
     {{ if getenv "NGINX_SET_REAL_IP_FROM" }}
     set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM" }};
     {{ end }}
+    {{ if getenv "NGINX_SET_REAL_IP_FROM_2" }}
+    set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM_2" }};
+    {{ end }}
+    {{ if getenv "NGINX_SET_REAL_IP_FROM_3" }}
+    set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM_3" }};
+    {{ end }}
+    {{ if getenv "NGINX_SET_REAL_IP_FROM_4" }}
+    set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM_4" }};
+    {{ end }}
+    {{ if getenv "NGINX_SET_REAL_IP_FROM_5" }}
+    set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM_5" }};
+    {{ end }}
+    {{ if getenv "NGINX_SET_REAL_IP_FROM_6" }}
+    set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM_6" }};
+    {{ end }}
+    {{ if getenv "NGINX_SET_REAL_IP_FROM_7" }}
+    set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM_7" }};
+    {{ end }}
+    {{ if getenv "NGINX_SET_REAL_IP_FROM_8" }}
+    set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM_8" }};
+    {{ end }}
+    {{ if getenv "NGINX_SET_REAL_IP_FROM_9" }}
+    set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM_9" }};
+    {{ end }}
 
     real_ip_header {{ getenv "NGINX_REAL_IP_HEADER" "X-Real-IP" }};
     real_ip_recursive {{ getenv "NGINX_REAL_IP_RECURSIVE" "off" }};
