--- a/templates/nginx.conf.tmpl
+++ b/templates/nginx.conf.tmpl
@@ -118,6 +118,10 @@ http {
     set_real_ip_from {{ getenv "NGINX_SET_REAL_IP_FROM" }};
     {{ end }}
 
+    {{ if getenv "NGINX_SET_REAL_IPS_FROM" }}{{ range jsonArray (getenv "NGINX_SET_REAL_IPS_FROM") }}
+    set_real_ip_from {{ . }};
+    {{ end }}{{ end }}
+
     real_ip_header {{ getenv "NGINX_REAL_IP_HEADER" "X-Real-IP" }};
     real_ip_recursive {{ getenv "NGINX_REAL_IP_RECURSIVE" "off" }};
 
