Improve Drupal static files security
These files can contain sensitive information.

--- a/templates/presets/drupal9.conf.tmpl
+++ b/templates/presets/drupal9.conf.tmpl
@@ -88,7 +88,8 @@ location / {
     }
     {{ end }}
 
-    location ~* ^(?:.+\.(?:make|txt|engine|inc|info|install|module|profile|po|pot|sh|.*sql|test|theme|tpl(?:\.php)?|xtmpl)|code-style\.pl|/Entries.*|/Repository|/Root|/Tag|/Template)$ {
+    # Replica of regex from Drupals core .htaccess.
+    location ~* \.(engine|inc|install|make|module|profile|po|sh|.*sql|theme|twig|tpl(\.php)?|xtmpl|yml)(~|\.sw[op]|\.bak|\.orig|\.save)?$|^(\.(?!well-known).*|Entries.*|Repository|Root|Tag|Template|composer\.(json|lock)|web\.config)$|^#.*#$|\.php(~|\.sw[op]|\.bak|\.orig|\.save)$ {
         return 404;
     }
 
